syntax = 'proto3';
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "customer/customer_model.proto";
import "customer/address_model.proto";

package customer;

option go_package = "shared/service";

message GetAllCustomersResponse {
  repeated customer.Customer customers = 1;
}

service CustomerQueryService {
  rpc getCustomer(google.protobuf.StringValue) returns (customer.Customer);
  rpc getAllCustomers(google.protobuf.Empty) returns (GetAllCustomersResponse);
}

message CommandCustomerRequest {
  string customer_id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  customer.Address address = 5;
}

service CustomerCommandService {
  rpc createCustomer(CommandCustomerRequest) returns (customer.Customer);
  rpc updateCustomer(CommandCustomerRequest) returns (customer.Customer);
  rpc deleteCustomer(google.protobuf.StringValue) returns (google.protobuf.BoolValue);
}